# SysTaskManager

./: .clang-format  CMakeLists.txt  main.cpp
includes/: QueueManager.hpp  RecurrenceParser.hpp  Recurrency.hpp  TaskInfo.hpp  TaskRunner.hpp  ThreadTaskManager.hpp
src/: QueueManager.cpp  RecurrenceParser.cpp  TaskInfo.cpp  TaskRunner.cpp
